--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -77,7 +77,7 @@
 			fg:			#fff
 		),
 
-		google-plus: (
+		angellist-plus: (
 			bg:			#db6b67,
 			fg:			#fff
 		),
@@ -87,7 +87,7 @@
 			fg:			#fff
 		),
 
-		dribbble: (
+		angellist: (
 			bg:			#da83ae,
 			fg:			#fff
 		)
