--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1551,7 +1551,8 @@
 /* Basic */
 
 	body {
-		background: #f3f6fa;
+		/* background: #f3f6fa; */
+		background: white;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -1566,7 +1567,8 @@
 		}
 
 	body, input, select, textarea {
-		color: #7c8081;
+		color: #545859;
+		/* color: #7c8081; */
 		font-family: 'Lato', sans-serif;
 		font-size: 15pt;
 		font-weight: 300;
@@ -1582,6 +1584,7 @@
 		color: #3fb1a3;
 		text-decoration: none;
 		border-bottom: dotted 1px;
+		border-radius: 5px;
 	}
 
 		a:hover {
@@ -1659,6 +1662,7 @@
 		padding-top: 7em;
 		position: relative;
 		text-align: center;
+		font-weight: 300;
 	}
 
 		header.special:before, header.special:after {
@@ -1812,7 +1816,6 @@
 			}
 
 /* Icon */
-
 	.icon {
 		text-decoration: none;
 		position: relative;
@@ -1939,7 +1942,7 @@
 	ul.featured-icons {
 		cursor: default;
 		margin: -0.75em 0 0 0;
-		opacity: 0.35;
+		opacity: 0.94;
 		overflow: hidden;
 		position: relative;
 	}
@@ -1949,6 +1952,8 @@
 			float: left;
 			text-align: center;
 			width: 50%;
+			margin-bottom: 5%;
+    	margin-top: 5%;
 		}
 
 			ul.featured-icons li .icon {
@@ -1985,6 +1990,21 @@
 				padding: 0;
 			}
 
+/* Icon */
+			[class^=devicon-] {
+		    font-family: devicon;
+		    speak: none;
+		    font-style: normal;
+		    font-weight: 400;
+		    font-variant: normal;
+		    text-transform: none;
+		    line-height: 1;
+		    font-size: 6em;
+		    margin-top: 4em;
+		    margin-bottom: 4em;
+		    -webkit-font-smoothing: antialiased;
+		    -moz-osx-font-smoothing: grayscale;
+			}
 /* Table */
 
 	table {
@@ -2036,7 +2056,7 @@
 		font-size: 0.8em;
 		font-weight: 900;
 		letter-spacing: 2px;
-		min-width: 18em;
+		min-width: 11em;
 		padding: 0 0.75em;
 		line-height: 3.75em;
 		text-align: center;
@@ -2056,9 +2076,10 @@
 		input[type="submit"].special,
 		input[type="reset"].special,
 		.button.special {
-			background: #83d3c9;
-			border-color: #83d3c9;
+			background: #72bda3;
+			border-color: #72bda3;
 			color: #fff !important;
+			border-radius: 5px;
 		}
 
 			input[type="button"].special:hover,
@@ -2097,7 +2118,7 @@
 		}
 
 		.wrapper.style2 {
-			background-color: #83d3c9;
+			background-color: #ef6461;
 			background-image: url("images/light-bl.svg"), url("images/light-br.svg");
 			background-position: bottom left, bottom right;
 			background-repeat: no-repeat, no-repeat;
@@ -2121,8 +2142,13 @@
 				}
 
 		.wrapper.style3 {
-			background: #fff;
-			color: inherit;
+			/* background: #fff;
+			color: inherit; */
+			/* border-color: #43367c; */
+	    color: inherit;
+	    background-color: #f3f6fa;
+	    /* border-style: solid; */
+	    border-width: 5px;
 		}
 
 		.wrapper.style4 {
@@ -2175,7 +2201,7 @@
 
 	#header {
 		background: #fff;
-		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
+		box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.075);
 		color: inherit;
 		cursor: default;
 		font-size: 0.8em;
@@ -2452,7 +2478,7 @@
 /* Main */
 
 	#main {
-		background-image: url("images/dark-tl.svg"), url("images/dark-tr.svg"), url("images/dark-bl.svg"), url("images/dark-br.svg");
+		/* background-image: url("images/dark-tl.svg"), url("images/dark-tr.svg"), url("images/dark-bl.svg"), url("images/dark-br.svg"); */
 		background-position: top left, top right, bottom left, bottom right;
 		background-repeat: no-repeat;
 		background-size: 25em;
@@ -2500,8 +2526,8 @@
 /* Footer */
 
 	#footer {
-		background: #E8EEF4;
-		color: #7c8081;
+		background: #242133;
+    color: #f7f7f7;
 		padding: 5em 5em 10em 5em;
 		text-align: center;
 	}
