--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1712,6 +1712,10 @@
 		margin-bottom: 0;
 	}
 
+	.email-footer {
+		font-size: 16px;
+	}
+
 	footer.major {
 		padding-top: 3em;
 	}
@@ -1787,7 +1791,7 @@
 	}
 
 		.image:before {
-			background: url("images/overlay.png");
+			/* background: url("images/overlay.png"); */
 			content: '';
 			height: 100%;
 			left: 0;
